# XieXie-2

./: README.md
docu/: XASM Notepad++ Highlighting.xml  (+3 more)
sources/: CMakeLists.txt  LinesCounter.ps1
sources/Base/: AppPath.cpp  AppPath.h  BitMask.h  Console.cpp  Console.h  DeclPtr.h  Dictionary.h  Export.h  FileHelper.cpp  FileHelper.h  Flags.h  Log.cpp  Log.h  MakeUnique.h  MapTypeSpell.h  SafeStack.h  StringModifier.cpp  StringModifier.h  Timer.cpp  Timer.h  Variant.cpp  Variant.h  Version.cpp  Version.h
sources/Compiler/: Compiler.cpp  Compiler.h  CompilerMessage.cpp  CompilerMessage.h  ErrorReporter.cpp  ErrorReporter.h  LibPaths.cpp  LibPaths.h  SearchPaths.cpp  SearchPaths.h  XieXie.cpp
sources/Compiler/AbstractSyntaxTrees/: AST.cpp  AST.h  ASTDeclarations.h  ASTImport.h  ASTViewer.cpp  ASTViewer.h  Arg.cpp  Arg.h  ArrayAccess.h  Attrib.cpp  Attrib.h  AttribPrefix.cpp  AttribPrefix.h  BuiltinClasses.h  ClassBodySegment.h  CodeBlock.h  EnumEntry.h  ForInit.h  Param.h  ProcCall.cpp  ProcCall.h  ProcOverloadSwitch.h  ProcSignature.cpp  ProcSignature.h  Program.h  SwitchCase.h  VarDecl.cpp  VarDecl.h  VarName.cpp  VarName.h  Visitor.h
sources/Compiler/AbstractSyntaxTrees/Expressions/: AllocExpr.h  BinaryExpr.cpp  BinaryExpr.h  CallExpr.h  CastExpr.h  Expr.h  InitListExpr.cpp  InitListExpr.h  InstanceOfExpr.h  LiteralExpr.cpp  LiteralExpr.h  MemberCallExpr.h  PostfixValueExpr.h  ProcCallExpr.h  RangeExpr.h  TernaryExpr.cpp  TernaryExpr.h  UnaryExpr.cpp  UnaryExpr.h  VarAccessExpr.h  VarNameExpr.h
sources/Compiler/AbstractSyntaxTrees/Lists/: StmntList.h
sources/Compiler/AbstractSyntaxTrees/Statements/: ClassDeclStmnt.cpp  ClassDeclStmnt.h  CopyAssignStmnt.h  CtrlTransferStmnt.h  DoWhileStmnt.h  EnumDeclStmnt.h  ExprStmnt.h  ExternClassDeclStmnt.h  FlagsDeclStmnt.h  ForEachStmnt.h  ForEverStmnt.h  ForInit.h  ForRangeStmnt.h  ForStmnt.h  FriendDeclStmnt.h  IfStmnt.h  InitDeclStmnt.h  ModifyAssignStmnt.cpp  ModifyAssignStmnt.h  PostOperatorStmnt.cpp  PostOperatorStmnt.h  ProcCallStmnt.h  ProcDeclStmnt.cpp  ProcDeclStmnt.h  ReleaseDeclStmnt.h  RepeatStmnt.h  ReturnStmnt.h  ScopedStmnt.h  Stmnt.h  SwitchStmnt.cpp  SwitchStmnt.h  VarDeclStmnt.cpp  VarDeclStmnt.h
sources/Compiler/AbstractSyntaxTrees/TypeDenoters/: ArrayTypeDenoter.cpp  ArrayTypeDenoter.h  BuiltinTypeDenoter.cpp  BuiltinTypeDenoter.h  DeclTypeDenoter.h  PointerTypeDenoter.cpp  PointerTypeDenoter.h  TypeDenoter.cpp  TypeDenoter.h
sources/Compiler/Assembler/: Assembler.cpp  Assembler.h
sources/Compiler/CodeGenerators/: AsmGenerator.cpp  AsmGenerator.h  NameMangling.cpp  NameMangling.h  RegisterAllocator.cpp  RegisterAllocator.h
sources/Compiler/CodeGenerators/XASM/: Core.xasm.h  CoreData.xasm.h  XASMGenerator.cpp  XASMGenerator.h  XASMNameMangling.cpp  XASMNameMangling.h
sources/Compiler/ContextAnalyzer/: ConstExprChecker.cpp  ConstExprChecker.h  Decorator.cpp  Decorator.h  ExprBoolEvaluator.cpp  ExprBoolEvaluator.h  ExprConstChecker.cpp  ExprConstChecker.h  ExprEvaluator.cpp  ExprEvaluator.h  ExprFloatEvaluator.cpp  ExprFloatEvaluator.h  ExprIntEvaluator.cpp  ExprIntEvaluator.h  ExprNamespaceFinder.cpp  ExprNamespaceFinder.h  ExprTypeChecker.cpp  ExprTypeChecker.h  StdClassGenerator.cpp  StdClassGenerator.h  StdCodeFactory.cpp  StdCodeFactory.h  SymbolTable.h  TypeChecker.cpp  TypeChecker.h
sources/Compiler/ControlFlowGraph/: BasicBlock.cpp  BasicBlock.h  CFGProgram.h  CFGTopDownCollector.cpp  CFGTopDownCollector.h  CFGTopDownTraverser.cpp  CFGTopDownTraverser.h  CFGViewer.cpp  CFGViewer.h  ClassTree.cpp  ClassTree.h  GraphGenerator.cpp  GraphGenerator.h
sources/Compiler/Optimizer/: BlockClean.cpp  BlockClean.h  BlockMerge.cpp  BlockMerge.h  CFGOptimizer.cpp  CFGOptimizer.h  ConstantFolding.cpp  ConstantFolding.h  ConstantPropagation.cpp  ConstantPropagation.h  CopyPropagation.cpp  CopyPropagation.h  KillBranches.cpp  KillBranches.h  Optimizer.cpp  Optimizer.h  ProcedureInlining.cpp  ProcedureInlining.h  TACOptimizer.cpp  TACOptimizer.h  VariableClean.cpp  VariableClean.h  VariableReduction.cpp  VariableReduction.h
sources/Compiler/SyntaxAnalyzer/: Keywords.cpp  Keywords.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  SourceArea.cpp  SourceArea.h  SourceCode.h  SourceFile.cpp  SourceFile.h  SourcePosition.cpp  SourcePosition.h  SourceStream.cpp  SourceStream.h  Token.cpp  Token.h
sources/Compiler/ThreeAddressCodes/: TACArgInst.cpp  TACArgInst.h  TACCondJumpInst.cpp  TACCondJumpInst.h  TACConst.cpp  TACConst.h  TACCopyInst.cpp  TACCopyInst.h  TACDirectCallInst.cpp  TACDirectCallInst.h  TACHeapInst.cpp  TACHeapInst.h  TACIndirectCallInst.cpp  TACIndirectCallInst.h  TACInst.cpp  TACInst.h  TACInstDeclarations.h  TACModifyAssignInst.cpp  TACModifyAssignInst.h  TACModifyInst.cpp  TACModifyInst.h  TACParamInst.cpp  TACParamInst.h  TACRelationInst.cpp  TACRelationInst.h  TACResultInst.cpp  TACResultInst.h  TACReturnInst.cpp  TACReturnInst.h  TACStackInst.cpp  TACStackInst.h  TACSwitchInst.cpp  TACSwitchInst.h  TACVar.cpp  TACVar.h  TACVarManager.cpp  TACVarManager.h  ValueTypes.h
sources/Modules/: xvm_module.c
sources/Modules/Audio/: Audio.c
sources/Modules/BigNum/: BigNum.cpp
sources/Modules/MsgBox/: MsgBox.c
sources/Modules/Socket/: Socket.c
sources/Modules/SysInfo/: SysInfo.c
sources/Platform/: ConsoleManip.cpp  ConsoleManip.h
sources/Platform/Linux/: LinuxConsoleManip.cpp
sources/Platform/Null/: NullConsoleManip.cpp
sources/Platform/Win32/: Win32ConsoleManip.cpp
sources/Shell/: Command.cpp  Command.h  HelpPrinter.cpp  HelpPrinter.h  Main.cpp  Shell.cpp  Shell.h  StreamParser.cpp  StreamParser.h
sources/Shell/Command/: AssembleCommand.cpp  CalcCommand.cpp  ColorCommand.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CompileCommand.cpp  CompileCommand.h  HelpCommand.cpp  LogCommand.cpp  ManCommand.cpp  PauseCommand.cpp  PromptCommand.cpp  ReplyCommand.cpp  RunCommand.cpp  VerboseCommand.cpp  VerifyCommand.cpp  VersionCommand.cpp
sources/Tools/: CoreAssemblyGenerator.cpp
sources/VirtualMachine/: XVMWrapper.cpp  XVMWrapper.h  xvm.c  xvm.h  xvm_shell.c  xvm_wrapper.cpp
(+152 files in other folders)
